<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/fileSelectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/select_file"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fileSelectBtn"
        android:layout_above="@+id/titleInputBox"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:contentDescription="@string/image" />

    <EditText
        android:id="@+id/titleInputBox"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/uploadBtn"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:autofillHints="Title"
        android:hint="@string/title"
        android:gravity="center"/>

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/upload"
        android:clickable="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progress="0"/>

</RelativeLayout>