<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/title"
        android:gravity="center"
        android:textSize="30sp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image"
        android:layout_below="@+id/title"
        android:layout_above="@+id/totalScore"
        android:background="#cccccc"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/totalScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/ratingLayout"
        android:text="@string/total_score"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_above="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:baselineAligned="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/cuteLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cuteRating"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/cuteBtn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:src="@drawable/cute_icon"
                android:scaleType="fitCenter"
                android:contentDescription="@string/rate_as_cute" />

            <TextView
                android:id="@+id/cuteScore"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/funnyLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/funnyRating"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/funnyBtn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:src="@drawable/funny_icon"
                android:scaleType="fitCenter"
                android:contentDescription="@string/rate_as_funny" />

            <TextView
                android:id="@+id/funnyScore"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/interestingLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/interestingRating"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/interestingBtn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:src="@drawable/interesting_icon"
                android:scaleType="fitCenter"
                android:contentDescription="@string/rate_as_interesting" />

            <TextView
                android:id="@+id/interestingScore"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/happyLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/happyRating"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/happyBtn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:src="@drawable/happy_icon"
                android:scaleType="fitCenter"
                android:contentDescription="@string/rate_as_happy" />

            <TextView
                android:id="@+id/happyScore"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/surprsingLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/surprisingRating"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>

            <ImageButton
                android:id="@+id/surprisingBtn"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:src="@drawable/surprising_icon"
                android:scaleType="fitCenter"
                android:contentDescription="@string/rate_as_surprising" />

            <TextView
                android:id="@+id/surprisingScore"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/continueBtn"
        android:text="@string/itemContinue"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>